# whisperx-api

./: .gitignore  README.md  app.py  index.html  pyproject.toml  test.py
